--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,12 @@
 
 en:
   hello: "Hello world"
+
+  gists:
+    create:
+      success: "Gist {link} created successfully"
+      failure: "An error occurred while creating the gist"
+
+  services:
+    gist_question_service:
+      description: "A question about %{title} from TestGuru"
