--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,2 +1,11 @@
 ru:
   hello: "Привет"
+
+  services:
+    gist_question_service:
+      description: "Вопрос о %{title} из TestGuru"
+
+  gists:
+    create:
+      success: "Gist %{link} успешно создан"
+      failure: "Во время создания gist произошла ошибка"
