--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,12 @@ en:
       success: "Gist {link} created successfully"
       failure: "An error occurred while creating the gist"
 
+  admin:
+    gists:
+      index:
+        header: "Gists"
+        no_gists: "No Gists"
+
   services:
     gist_question_service:
       description: "A question about %{title} from TestGuru"
