--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,3 +9,9 @@ ru:
     create:
       success: "Gist %{link} успешно создан"
       failure: "Во время создания gist произошла ошибка"
+
+  admin:
+    gists:
+      index:
+        header: "Gists"
+        no_gists: "Gists нет"
