Add gists page to admin panel(nav_bar), add working links to created gist(add gem sanitize), refactor seeds

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,7 @@ en:
 
   gists:
     create:
-      success: "Gist {link} created successfully"
+      success: "Gist %{link} created successfully"
       failure: "An error occurred while creating the gist"
 
   admin:
