Add timer to test_passages_controller, and to models

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,10 @@
 en:
   hello: "Hello world"
 
+  test_passages:
+    show:
+      timer: "Time to end"
+
   gists:
     create:
       success: "Gist %{link} created successfully"
